[gd_scene load_steps=5 format=2]

[ext_resource path="res://fonts/ZenDots-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/HackMenu.gd" type="Script" id=2]
[ext_resource path="res://Graphics/devTree/background.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 17
font_data = ExtResource( 1 )

[node name="HackMenu" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 643.025, 359.782 )
rotation = 1.5708
scale = Vector2( 0.679829, 0.794862 )
texture = ExtResource( 3 )

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = 448.0
margin_top = 480.0
margin_right = 768.0
margin_bottom = 536.0

[node name="Label" type="Label" parent="."]
margin_left = 512.0
margin_top = 96.0
margin_right = 768.0
margin_bottom = 117.0
custom_fonts/font = SubResource( 1 )
text = "Hacking progress"
align = 1
valign = 1

[node name="Button" type="Button" parent="."]
margin_left = 480.0
margin_top = 288.0
margin_right = 672.0
margin_bottom = 320.0
text = "StartHack"

[node name="HackingTimer" type="Timer" parent="."]

[connection signal="pressed" from="Button" to="." method="startHacking"]
[connection signal="timeout" from="HackingTimer" to="." method="_on_HackingTimer_timeout"]
